--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     margin-top: 40px;
+    max-width: 75%;
 
 }
 
@@ -653,7 +654,7 @@ width: 50%;
 .steps__section--tag{
     display: flex;
     align-self: flex-start;
-    margin-left: 72px;
+    margin-left: 52px;
 }
 .section__title {
     font-size: 48px;
@@ -720,7 +721,15 @@ width: 50%;
     justify-content: space-between;
     align-items: center;
 }
-
+.values__section--tag {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: flex;
+    margin-left: 32px;
+}
 
 .row {
     width: 100%;
@@ -749,15 +758,7 @@ width: 50%;
 }
 
 
-.section__tag {
-    font-size: 16px;
-    color: #6415ff;
-    letter-spacing: 1.6px;
-    font-weight: 700;
-    text-transform: uppercase;
-    display: flex;
-    margin-left: 24px;
-}
+
 
 .section__title {
     margin-top: 16px;
@@ -1399,6 +1400,7 @@ button {
 .testimonial__bottom{
    display: flex;
    align-items: center;
+   justify-content: space-between;
 
 }
 
@@ -1481,7 +1483,7 @@ section {
 }
 
 .start__container {
-    padding: 96px 0;
+    padding: 96px 24px;
     width: 100%;
     background-color: rgb(100 21 255);
     border-radius: 8px;
@@ -1522,12 +1524,12 @@ section {
 .start__buttons {
     display: flex;
     justify-content: flex-end;
+    gap: 6px;
 }
 
 .start__button:nth-child(1) {
     background: #f56565;
     box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    margin-right: 32px;
     transition: all 300ms ease;
 }
 
@@ -1608,17 +1610,20 @@ footer {
 }
 
 .footer__columns {
-    margin-top: -48px;
+    margin-top:-48px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+
 }
 .footer__column {
     margin-top: 48px;
-    display: flex;
-    flex-direction: column;
+    display:flex;
+    flex-direction:column;
     align-items: flex-start;
     z-index: 2;
+  
+
 
 }
 
@@ -1657,6 +1662,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .footer__logo {
@@ -1779,6 +1785,11 @@ a {
     
     
     } 
+    .values__section--tag{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
     .steps__section--tag{
          display: flex;
          flex-wrap: wrap;
@@ -1836,11 +1847,13 @@ a {
 
   .start__row{
     flex-direction: column;
+
   }
  .start__title{
     text-align: center;
     width: 100%;
     max-width: 512px;
+    font-size: 24px;
   }
   .start__buttons{
     width: auto;
@@ -1894,7 +1907,6 @@ a {
    .footer__columns{
     margin-top: 48px;
     display: flex;
-    flex-direction: column;
      z-index: 2;
    }
  
@@ -1910,6 +1922,7 @@ a {
         margin-right: 0px;
 
     }
+  
   
       .section__para{
         font-size: 14px;
@@ -1932,11 +1945,19 @@ a {
     margin-top: 64px;
     text-align: center;
 }
-  n .testimonial-bottom{
+.testimonial-bottom{
       flex-wrap: wrap;
+}
+.footer__columns{
+    justify-content: flex-start;
+}
+.footer__column{
+   width:calc(100% / 3)
+
 }
 .footer__logo{
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 .footer__copyright{
@@ -1945,12 +1966,13 @@ a {
 .footer__socials{
     margin-left: 0px;
     margin-top: 32px;
-    display: flex;
-    align-items: center;
+
 }
 .footer__bottom{
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+
 }
 }
 
@@ -1994,6 +2016,15 @@ a {
         text-align: center;
         line-height: 1.5;
     }
+    .footer__columns{
+        justify-content: center;
+    }
+    .footer__column{
+        width: auto;
+        padding: 16px;
+        text-align: center;
+        align-items: center;
+    }
    
 }
    
@@ -2014,10 +2045,14 @@ a {
 @media (max-width:550px) {
     .start__buttons{
         flex-direction: column;
+        gap: 12px;
     }
 }
 
 
 
-    @media (max-width:350px) {
+    @media (max-width:290px) {
+        .footer__bottom{
+            text-align: center;
+        }
 }
