--- a/style.css
+++ b/style.css
@@ -44,10 +44,10 @@ li {
 .nav__row {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    align-items: center;
+    
 }
 
 .row {
@@ -93,6 +93,7 @@ li {
     border-bottom: 2px solid transparent;
     position: relative;
     color: #242424;
+    transition: all 300ms;
 
 }
 
@@ -131,6 +132,18 @@ a {
     width: auto;
     transition: all 300ms ease;
 }
+.nav__link--primary:after{
+    content: ""
+    width:0;
+    height:0:
+}
+.nav__link:after{
+    position: absolute;
+    left: 0;
+    bottom: -6;
+    background: #6415ff;
+    opacity: 0;
+}
 
 .nav__link--primary:hover {
     background-color: rgba(80, 17, 204);
@@ -141,8 +154,9 @@ a {
 .btn__menu {
     background-color: transparent;
     border: none;
-    transition: all 300ms ease;
     display: none;
+    transition: all 300ms ease;
+   
 
 }
 
@@ -297,10 +311,7 @@ h1 {
         margin-bottom: 0px;
         line-height: 1.5;
     }
-.header__customers--title{
-        font-size: 14px;
-        letter-spacing: 0.05em;
-    }
+
 
 .email__btn {
     z-index: 2;
@@ -316,7 +327,9 @@ h1 {
     transition: all 300ms ease;
 }
    
-
+.header__customer{
+    opacity: 0.5;
+}
 .header__customers--title {
     margin-top: 80px;
     color: #a0aec0;
@@ -324,6 +337,10 @@ h1 {
     font-weight: 700;
     letter-spacing: 0.6;
 }
+.header__customers--title{
+        font-size: 14px;
+        letter-spacing: 0.05em;
+    }
 
 .header__customers {
     padding-right: 64px;
@@ -497,14 +514,13 @@ img {
 
   
 .quality__description {
-    max-width: 550px;
-    margin-right: 54px;
+    max-width: 576px;
+    margin-right: 64px;
+    text-align: center;
+    
 }
 
-.quality__description{
-    flex-direction: column;
 
- }
 
 .quality__section--tag {
     font-size: 16px;
@@ -512,6 +528,7 @@ img {
     letter-spacing: 1.6px;  
     font-weight: 700;
     text-transform: uppercase;
+    
 }
 
 #quality.section__title #values .section__title {
@@ -531,7 +548,7 @@ img {
     font-weight: 500;
     color: #7c8ba1;
     line-height: 1.625;
-    max-width: 398px;
+
 }
 
 #quality .btn {
@@ -541,6 +558,7 @@ img {
 .btn {
     background-color: #6415ff;
     padding: 12px 32px;
+    border: none;
     border-radius: 500px;
     font-size: 14px;
     color: #fff;
@@ -563,10 +581,7 @@ img {
     display: flex;
 }
 
-.quality__description,
-.quality__img--wrapper {
-    width: 50%;
-}
+
 
 .quality__img {
     z-index: 1;
@@ -1718,7 +1733,12 @@ a {
 .testimonial__bottom{
     flex-direction: column;
 }
-
+.nav__links {
+        display: none;
+    }
+.btn__menu{
+   display: block;
+}
 
 .feature__row{
     width:calc(50%);
@@ -1726,12 +1746,17 @@ a {
 #steps .section__title{
     font-size:36px;
 }
+.plans{
+
+   
+        flex-direction: column;
+        align-items: center;
+        margin-left: 24px;
+}
 }
 /*small phones, tablets,large smartphones*/
 @media(max-width:768px) {
-    .nav__links {
-        display: none;
-    }
+    
     .header__customers--title {
     margin-top: 48px;}
 
@@ -1834,11 +1859,7 @@ a {
     .quality__para{
          font-size: 16px;
     }
-    .plans{
-        flex-direction: column;
-        align-items: center;
-        margin-left: 24px;
-    }
+   
     #testimonials .container{
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -1945,8 +1966,14 @@ a {
     margin-top: 64px;
     text-align: center;
 }
+.testimonial__profile{
+    display: flex;
+    flex-direction: column;
+
+}
 .testimonial-bottom{
       flex-wrap: wrap;
+      align-items: center;
 }
 .footer__columns{
     justify-content: flex-start;
